# aoc-2024-py

./: README.md  check.sh  main.py  pyproject.toml  timer.py
solutions/: base.py  day01.py  day02.py  day03.py  day04.py  day05.py  day07.py
solutions/utils/: grid.py
tests/: test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day07.py  utils.py
